.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:55:48 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main_app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main_app.d" -MT"Core/Src/main_app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main_app.o"
arm-none-eabi-gcc -o "CAN_RX_DEMO.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Bachelor thesis\Workspace\CAN_RX_DEMO\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CAN_RX_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: CAN_RX_DEMO.elf
 
arm-none-eabi-size   CAN_RX_DEMO.elf 
arm-none-eabi-objdump -h -S  CAN_RX_DEMO.elf  > "CAN_RX_DEMO.list"
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
Finished building: CAN_RX_DEMO.list
 
15:55:55 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
15:56:48 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
15:58:25 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
15:59:06 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main_app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main_app.d" -MT"Core/Src/main_app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main_app.o"
../Core/Src/main_app.c: In function 'main':
../Core/Src/main_app.c:24:13: error: void value not ignored as it ought to be
   24 |         if( CAN1_init()!= HAL_OK){
      |             ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main_app.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
15:59:42 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main_app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main_app.d" -MT"Core/Src/main_app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main_app.o"
arm-none-eabi-gcc -o "CAN_RX_DEMO.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Bachelor thesis\Workspace\CAN_RX_DEMO\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CAN_RX_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: CAN_RX_DEMO.elf
 
arm-none-eabi-size   CAN_RX_DEMO.elf 
arm-none-eabi-objdump -h -S  CAN_RX_DEMO.elf  > "CAN_RX_DEMO.list"
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
Finished building: CAN_RX_DEMO.list
 
15:59:44 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
16:03:51 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
16:17:04 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-size   CAN_RX_DEMO.elf 
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
16:25:05 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main_app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main_app.d" -MT"Core/Src/main_app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main_app.o"
arm-none-eabi-gcc -o "CAN_RX_DEMO.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Bachelor thesis\Workspace\CAN_RX_DEMO\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CAN_RX_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: CAN_RX_DEMO.elf
 
arm-none-eabi-size   CAN_RX_DEMO.elf 
arm-none-eabi-objdump -h -S  CAN_RX_DEMO.elf  > "CAN_RX_DEMO.list"
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
Finished building: CAN_RX_DEMO.list
 
16:36:54 **** Incremental Build of configuration Debug for project CAN_RX_DEMO ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main_app.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main_app.d" -MT"Core/Src/main_app.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main_app.o"
arm-none-eabi-gcc -o "CAN_RX_DEMO.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Bachelor thesis\Workspace\CAN_RX_DEMO\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="CAN_RX_DEMO.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: CAN_RX_DEMO.elf
 
arm-none-eabi-size   CAN_RX_DEMO.elf 
arm-none-eabi-objdump -h -S  CAN_RX_DEMO.elf  > "CAN_RX_DEMO.list"
   text	   data	    bss	    dec	    hex	filename
  14140	    112	   1944	  16196	   3f44	CAN_RX_DEMO.elf
Finished building: default.size.stdout
 
Finished building: CAN_RX_DEMO.list
 
